Fixed overflow and centered image modal

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 img {
@@ -87,7 +89,7 @@ p {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: calc(50vh - 150px); /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -223,6 +225,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: left;
+    justify-content: center;
 }
 
 .hlayout {
@@ -273,18 +276,15 @@ p {
 .gallery {
     width: 100%;
     height: 90px;
+    display: flex;
+    justify-content: left;
     overflow-x: auto;
+    flex-wrap: nowrap;
 }
 
 .gallery img {
+    flex: 0 0 auto;
     width: 160px;
     height: 90px;
     cursor: pointer;
-    opacity: 0.7;
-    transition: opacity 300ms, transform 300ms ease;
-}
-
-.gallery img:hover {
-    opacity: 1;
-    transform: scale(1.02, 1.02);
 }
